--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,11 +1,30 @@
-$color-primary: #0070f3;
-$color-black: #000;
+$color-primary: #f0b254;
+$color-black: #12143a;
 $color-white: #fff;
+$color-footer-bg: #12143a;
 $color-dark-gray: #1f1f1f;
 $color-light-gray: #f2f2f2;
 $color-mid-gray: #606060;
 
-$font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
+@font-face {
+    font-family: 'DejavuSans';
+    src: url('dejavu-sans.book.ttf');
+}
+@font-face {
+    font-family: 'AvenirBlack';
+    src: url('AvenirLTStd-Black.otf');
+}
+@font-face {
+    font-family: 'AvenirBook';
+    src: url('AvenirLTStd-Book.otf');
+}
+@font-face {
+    font-family: 'AvenirRoman';
+    src: url('AvenirLTStd-Roman.otf');
+}
+
+
+$font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'dejavusans';
 $font-weight-normal: 300;
 $font-weight-bold: 600;
 
