--- a/src/scss/components/Footer.module.scss
+++ b/src/scss/components/Footer.module.scss
@@ -15,12 +15,14 @@
 }
 
 footer.main {
-	background: $color-light-gray;
-	height: 100px;
+	background: $color-footer-bg;
+	padding: 40px 0;
+	
 }
 
-footer.main p {
-	color: $color-dark-gray;
-	line-height: 100px;
+footer.main p{
+	color: $color-white;
 	margin: 0;
+	font-family: 'AvenirBook';
+	font-size: 15px;
 }
