--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -671,6 +671,11 @@ footer{
 		border: 2px solid $color-primary;
 		color: $color-white !important;
 	}
+	&.selected{
+		background: $color-footer-bg !important;
+		color: $color-white !important;
+		border: 2px solid $color-footer-bg;
+	}
 	
 }
 .blog-container{
@@ -692,7 +697,7 @@ footer{
 	}
 	.blog-content{
 		overflow: hidden;
-		text-align: justify;
+		// text-align: justify;
 		margin-top: 10px;
 			/* text-overflow: ellipsis; */
 			/* white-space: nowrap; */
@@ -793,6 +798,14 @@ footer{
 		padding: 10px 15px 6px 15px;
 		color: $color-black !important;
 		border-radius: 7px;
+	}
+}
+.pagination {
+    margin: 50px auto;
+    justify-content: center;
+	button {
+		padding: 5px 18px;
+		margin: 10px;
 	}
 }
 
