--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,7 @@
-$color-primary: #f0b254;
+$color-primary: #12143a;
+$color-secondary: #f0b254;
 $color-black: #12143a;
 $color-white: #fff;
-$color-footer-bg: #12143a;
 $color-dark-gray: #1f1f1f;
 $color-light-gray: #f2f2f2;
 $color-mid-gray: #606060;
