--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -45,17 +45,17 @@ body {
 	color: $color-black;
 	font-size: 18px;
 	line-height: 1.6;
-	.preloader {
-		background: $color-primary;
-		width: 100%;
-		height: 100%;
-		z-index: 99;
-		position: fixed;
-		text-align: center;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-	}
+	// .preloader {
+	// 	background: $color-primary;
+	// 	width: 100%;
+	// 	height: 100%;
+	// 	z-index: 99;
+	// 	position: fixed;
+	// 	text-align: center;
+	// 	display: flex;
+	// 	justify-content: center;
+	// 	align-items: center;
+	// }
 }
 .navbar-nav{
 	a{
@@ -64,7 +64,7 @@ body {
 		margin-left: 16px;
 		text-decoration: none;
 		color: $color-primary;
-		font-size: 16px;
+		font-size: 14px;
 		border-bottom: 2px solid transparent;
 		padding: 4px 0;
 		position: relative;
