fixed menu and added some pages under location page

--- a/src/scss/components/Banner.module.scss
+++ b/src/scss/components/Banner.module.scss
@@ -41,6 +41,7 @@
         text-transform: uppercase;
         font-family: 'AvenirBook';
         font-size: 25px;
+        border-radius: 0;
         span{
             color: $color-secondary;
             font-family: 'AvenirBlack';
