--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -240,12 +240,14 @@ body {
   background-position: center center;
   width: 100%;
   height: 600px;
+  position: relative;
   h2 {
     font-family: "AvenirBook";
     padding: 50px;
     font-size: 80px;
     color: $color-white;
-    position: relative;
+    position: absolute;
+    top: 40px;
     &:after {
       position: absolute;
       top: 45%;
@@ -418,14 +420,16 @@ footer {
   background-size: cover;
   background-position: center center;
   width: 100%;
-  height: 600px;
   display: flex;
   justify-content: center;
-  align-items: flex-end;
-  margin: 80px 0;
+  align-items: center;
+  flex-direction: column;
+  margin: 30px 0;
   .cta_text {
     margin-bottom: 40px;
     text-align: center;
+    position: relative;
+    top: -120px;
     .ctaBtn {
       background: $color-black;
       border-radius: unset;
@@ -448,7 +452,7 @@ footer {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  width: 85%;
+  width: 100%;
   height: 500px;
   display: flex;
   margin: 50px 0;
@@ -458,7 +462,7 @@ footer {
     margin-bottom: 40px;
     text-align: center;
     position: relative;
-    left: 116px;
+    left: -70px;
     top: 65px;
     position: relative;
     &:before {
@@ -1418,6 +1422,7 @@ textarea#comment {
     font-size: 20px;
   }
   .faq_section {
+    position: relative !important;
     width: 100%;
     .faq_text {
       text-align: center;
