--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,6 +2,7 @@
 
 @import "variables";
 @import "typography";
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap');
 
 .hero-title-col {
   position: relative;
@@ -67,15 +68,14 @@ body {
     list-style: none;
     display: flex;
     margin-top: revert;
-    li{
+    li {
       position: relative;
-      &:hover{
-        ul.submenu{
+      &:hover {
+        ul.submenu {
           display: block;
-  
         }
       }
-      ul.submenu{
+      ul.submenu {
         display: flex;
         flex-direction: column;
         position: absolute;
@@ -87,21 +87,19 @@ body {
         margin: 0;
         padding: 0;
         background: #fff;
-        li{
-         
-
-          a{
+        li {
+          a {
             padding: 13px;
             margin: 0;
             border-bottom: 2px solid $color-secondary;
-            &:hover{
+            &:hover {
               background: $color-secondary;
               color: $color-white;
             }
-            &:before{
+            &:before {
               display: none;
             }
-            &:after{
+            &:after {
               display: none;
             }
           }
@@ -177,10 +175,12 @@ body {
     left: 0;
   }
   .carousel-indicators [data-bs-target] {
-    width: 10px;
-    height: 10px;
+    width: 8px;
+    height: 8px;
     background-color: $color-white;
     opacity: 1;
+    border: 5px solid transparent;
+    outline: 1px solid $color-white;
   }
   .carousel-indicators .active {
     width: 12px;
@@ -189,15 +189,27 @@ body {
     position: relative;
     top: -1px;
     opacity: 1;
+    border: 5px solid transparent;
+    outline: 1px solid $color-secondary;
   }
 }
 
 .wehelp_section {
   padding: 80px 0;
-  // background-image: url('/images/we-help-bg.png');
-  background-repeat: no-repeat;
-  background-size: 300px 300px;
-  background-position: bottom left;
+  position: relative;
+  &:before {
+    content: "";
+
+    background-image: url(/images/we-help-bg.png);
+    background-repeat: no-repeat;
+    background-size: 350px auto;
+    background-position: bottom left;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 610px;
+    height: 905px;
+  }
   .wehelp_image {
     width: 90%;
   }
@@ -366,6 +378,29 @@ footer {
         text-align: right;
       }
     }
+    .footer-menu {
+      ul{
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        span{
+          float: left;
+          overflow: hidden;
+          margin-right: 15px;
+          li{
+            a{
+              &:hover{
+                color: #fff !important;
+              }
+            }
+            .submenu{
+              display: none;
+            }
+          }
+        }
+       
+      }
+    }
 
     .social-url {
       position: relative;
@@ -435,6 +470,7 @@ footer {
       border-radius: unset;
       padding: 5px 30px;
       font-size: 20px;
+      border: none;
     }
   }
   h3 {
@@ -450,8 +486,8 @@ footer {
 
 .faq_section {
   background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
+  background-size: 84% auto;
+  background-position: left center;
   width: 100%;
   height: 500px;
   display: flex;
@@ -550,6 +586,12 @@ footer {
   position: relative;
   overflow: hidden;
   padding: 50px 0;
+  .carousel-inner {
+    position: relative;
+    width: 90%;
+    overflow: hidden;
+    margin: auto;
+  }
   .carouselcaption {
     position: absolute;
     right: 15%;
@@ -608,7 +650,7 @@ footer {
       height: 0%;
       position: absolute;
       top: 0;
-      left: 4%;
+      left: -2%;
       overflow: visible;
       border-top: 1200px solid rgba(18, 20, 58, 0.8);
       border-left: 0 solid transparent;
@@ -669,7 +711,6 @@ footer {
   text-align: center;
   position: absolute;
   left: 0;
-  
 }
 .contact-icon svg {
   font-size: 23px;
@@ -699,10 +740,10 @@ footer {
 .contact-row {
   margin-left: -8px;
   margin-right: -8px;
-  label{
+  label {
     text-transform: capitalize;
   }
-  .contact-title{
+  .contact-title {
     padding: 23px 10px;
     font-size: 25px;
   }
@@ -907,15 +948,18 @@ textarea#comment {
     justify-content: center;
     align-items: center;
 
-    h4 {
+    a {
       font-size: 15px;
       font-family: "AvenirBlack";
+      color: $color-primary !important;
     }
     &:hover {
       background: $color-primary;
       border: 1px solid $color-primary;
-      color: $color-secondary;
       cursor: pointer;
+      a {
+        color: $color-secondary !important;
+      }
     }
   }
   .react-multiple-carousel__arrow {
@@ -965,6 +1009,41 @@ textarea#comment {
     background: #eee;
     padding: 30px;
     margin-top: 50px;
+  }
+  .service-container {
+    .service-row:nth-child(odd) {
+      background-color: $color-primary;
+      h2 {
+        color: $color-white;
+        font-size: 22px;
+      }
+      p {
+        color: $color-white;
+        a {
+          color: $color-white !important;
+        }
+      }
+    }
+    .service-row:nth-child(even) {
+      h2 {
+        color: $color-primary;
+        font-size: 22px;
+      }
+      p {
+        color: $color-primary;
+        a {
+          color: $color-primary !important;
+        }
+      }
+    }
+    .service-image {
+      span {
+        width: 100% !important;
+        img {
+          width: 100% !important;
+        }
+      }
+    }
   }
 }
 .our-locations {
@@ -1052,12 +1131,13 @@ textarea#comment {
         align-items: center;
         cursor: pointer;
 
-        h2 {
+        a {
           color: $color-secondary;
           text-transform: uppercase;
-          font-size: 50px;
+          font-size: 40px;
           font-family: "AvenirBlack";
           font-weight: 900;
+          width: 100%;
           span {
             display: block;
           }
@@ -1228,14 +1308,14 @@ textarea#comment {
   .renovation-row {
     display: flex;
     flex-wrap: nowrap;
-	width: 80%;
+    width: 80%;
     margin: auto;
     align-items: center;
     .renovation.nav-tabs {
       display: flex;
       flex-direction: column;
       border-bottom: none;
-	  width: 50%;
+      width: 50%;
       .nav-link {
         font-size: 17px;
         font-weight: 400;
@@ -1243,23 +1323,21 @@ textarea#comment {
         padding: 10px 0;
         cursor: pointer;
         color: $color-black;
-		&:hover{
-			border-color: transparent;
-		}
-		
+        &:hover {
+          border-color: transparent;
+        }
       }
       .nav-link.active {
         font-size: 15px;
         font-weight: 600;
         font-family: "AvenirBlack";
         border-bottom: 2px solid $color-secondary;
-		border-top: none;
-		border-left:  none;
-		border-right:  none;
+        border-top: none;
+        border-left: none;
+        border-right: none;
         display: inline;
         padding: 5px 0;
       }
-      
     }
     .tab-content {
       background: $color-light-gray;
@@ -1300,6 +1378,34 @@ textarea#comment {
     }
   }
 }
+
+.works-container{
+  .works-title{
+    font-size: 45px;
+    font-family: 'Oswald', sans-serif;
+  }
+  .works-content{
+    text-align: justify;
+  }
+
+}
+
+// .howitworks-image{
+//   position: relative;
+//   img{
+//     bottom: -30% !important;
+//   }
+//   &:after {  
+//     position: absolute;   
+//     overflow: hidden;
+//     width: 70%;
+//     height: 3px;
+//     content: " ";
+//     background-color: $color-secondary;
+//     left: -20%;
+//     bottom: 0%;
+//   }
+// }
 
 @media all and (max-width: 912px) {
   .wehelp_section .wehelp_text h2 {
@@ -1353,7 +1459,7 @@ textarea#comment {
 @media all and (max-width: 768px) {
   .navbar-nav ul {
     flex-direction: column;
-}
+  }
   h2,
   span {
     :after,
@@ -1367,6 +1473,9 @@ textarea#comment {
   .Banner_carouselcaption__NAlFf {
     bottom: 0;
   }
+
+
+
   footer {
     text-align: center;
     .wrap {
