--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -119,6 +119,7 @@ body {
     position: relative;
     font-weight: 800;
     display: block;
+    text-align: center;
     &:hover {
       // font-family: 'AvenirBlack';
       border-bottom: 2px solid $color-secondary;
@@ -776,7 +777,7 @@ textarea {
   -ms-transition: border-color 0.3s ease-in-out;
   -o-transition: border-color 0.3s ease-in-out;
   transition: border-color 0.3s ease-in-out;
-  border-radius: 10px;
+  border-radius: 3px;
 }
 textarea#comment {
   height: 190px;
@@ -827,10 +828,7 @@ textarea#comment {
   }
   .blog-content {
     overflow: hidden;
-    // text-align: justify;
     margin-top: 10px;
-    /* text-overflow: ellipsis; */
-    /* white-space: nowrap; */
     display: -webkit-box;
     -webkit-line-clamp: 6;
     -webkit-box-orient: vertical;
@@ -858,35 +856,89 @@ textarea#comment {
 }
 
 .currentRate {
-  .current-rate,
+  .current-rate{
+    position: relative;
+    top: -103px;
+    table{
+      tbody{
+        tr:nth-child(odd){
+          background: #f0b25430;
+
+        }
+      }
+    }
+  }
   .notes {
     p {
       margin: 0;
       font-size: 14px;
     }
   }
+  .current-container{
+    width: 60%;
+    margin: auto;
+    text-align: center;
+    background: $color-white;
+    z-index: 999;
+    display: block;
+    position: relative;
+    border-radius: 30px 30px 0 0;
+    padding: 6px 0;
+    p{
+      margin: 0;
+    }
+    table{
+      border-top: 2px solid $color-secondary;
+    }
+    h3{
+      font-family: 'Oswald', sans-serif;
+      margin-bottom: 30px;
+    }
+    .contactBtn{
+      position: relative;
+      z-index: 999;
+      background: #f0b254 !important;
+      border: 2px solid transparent !important;
+      text-transform: uppercase;
+      font-family: "AvenirBook";
+      font-size: 15px;
+      padding: 10px 20px 6px 20px;
+      color: #12143a !important;
+      border-radius: 15px 15px 0  15px;
+    }
+  }
   .easy-application {
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 120% 100%;
     background-position: center center;
     width: 100%;
     position: relative;
-    text-align: center;
-    padding: 50px;
-    // .overlay {
-    // 	background: rgba(0,0,0,0.5);
-    // 	width: 100%;
-    // 	height: 100%;
-    // 	position: absolute;
-    // 	overflow: hidden;
-    // }
-    h1,
-    h2 {
-      color: $color-white;
+    padding: 0;
+
+    .overlay {
+    	background-image: linear-gradient(to right, rgba(18, 20, 58, 1) , rgba(0,0,0,0)) ;
+    	width: 100%;
+    	height: 100%;
+    	position: absolute;
+    	overflow: hidden;
     }
+    .easyapplication-title{
+      z-index: 999;
+      position: relative;
+      padding-top: 20px;
+      h2{
+        color: $color-white;
+        font-family: 'Oswald', sans-serif;
+      }
+      p {
+        color: $color-secondary;
+        margin-bottom: 0;
+      }
+    }
+   
     .application-container {
-      width: 60%;
-      padding: 20px 0;
+      
+      padding: 5px 0;
       margin: auto;
       z-index: 9999;
 
@@ -894,37 +946,55 @@ textarea#comment {
         background: $color-white;
       }
       .contactBt {
+        position: relative;
+        z-index: 999;
         background: $color-secondary !important;
-        border: 2px solid $color-black !important;
+        border: 2px solid transparent !important;
         text-transform: uppercase;
         font-family: "AvenirBook";
-        font-size: 18px;
-        padding: 10px 15px 6px 15px;
+        font-size: 15px;
+        padding: 10px 20px 6px 20px;
         color: $color-black !important;
-        border-radius: 7px;
+        border-radius: 15px 15px 15px 0;  
       }
     }
   }
 }
-.calculator-cta {
-  background: $color-primary;
-  width: 80%;
-  margin: 50px auto;
-  padding: 50px 0;
+.calculator-cta{
+  width: 50%;
+  margin: 30px auto;
+  padding: 30px 0;
   text-align: center;
   h2 {
-    color: $color-white;
+    font-family: 'Oswald', sans-serif;
+    font-size: 40px;
+    color: $color-black;
     margin-bottom: 30px;
+    position: relative;
+    &:after{
+    position: absolute;
+    overflow: hidden;
+    width: 100%;
+    height: 3px;
+    content: " ";
+    background-color: #f0b254;
+    right: 0;
+    bottom: -31%;
+    
+    }
   }
   .contactBtn {
     background: $color-secondary !important;
-    border: 2px solid $color-black !important;
+    border: 1px solid transparent !important;
     text-transform: uppercase;
     font-family: "AvenirBook";
-    font-size: 18px;
+    font-size: 15px;
     padding: 10px 15px 6px 15px;
     color: $color-black !important;
-    border-radius: 7px;
+    border-radius: 0px 0px 15px 15px;
+    cursor: ponter;
+   
+    
   }
 }
 .pagination {
@@ -1175,7 +1245,7 @@ textarea#comment {
         height: 3px;
         content: " ";
         background-color: $color-secondary;
-        left: 45%;
+        left: 50%;
         top: 25%;
       }
       span {
@@ -1457,6 +1527,18 @@ textarea#comment {
   }
 }
 @media all and (max-width: 768px) {
+  .navbar-nav a:hover {
+    border-bottom: unset;
+}
+  .navbar-nav a:hover:before {
+   display:none;
+}
+  .navbar-nav a {
+    text-align: center;
+}
+  .wehelp_image video {
+    width: 100% !important; 
+}
   .navbar-nav ul {
     flex-direction: column;
   }
@@ -1511,6 +1593,19 @@ textarea#comment {
   }
 }
 @media all and (max-width: 540px) {
+  footer .wrap .footer-logo {
+    width: unset;
+}
+  .currentRate .current-container {
+    width: 100%;
+}
+  footer .wrap .footer-menu ul span {
+    float: none;
+    margin-right: 0;
+}
+.ms-auto.py-5.my-5.my-lg-0.footer-menu {
+  margin: 0 !important;
+}
   .flexability-slider .carouselcaption .bannerCaption {
     padding: 15px 30px;
     margin-top: 0;
@@ -1518,11 +1613,14 @@ textarea#comment {
   .flexability-slider .carouselcaption .bannerCaption p {
     margin-top: 5px;
   }
-  .flexability-slider .carouselcaption .bannerCaption h1 {
+  .hero-title-col .hero-title {
     font-size: 50px;
+}
+  .flexability-slider .carouselcaption .bannerCaption h1 {
+    font-size: 40px;
   }
   h2 {
-    font-size: 50px !important;
+    font-size: 30px !important;
   }
   .Banner_carouselcaption__NAlFf .Banner_bannerCaption__rNEma h1 {
     font-size: 60px;
@@ -1582,7 +1680,6 @@ textarea#comment {
     }
   }
   .calculator-cta {
-    background: $color-primary;
     width: 80%;
     margin: 50px auto;
     padding: 50px 0;
@@ -1607,4 +1704,7 @@ textarea#comment {
   .Banner_carouselcaption__NAlFf .Banner_bannerBtn__0r6sX {
     font-size: 15px;
   }
+  .currentRate .easy-application .overlay {
+    width: unset;
+}
 }
